[package]
name = "leptos_ui_theme_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Deterministic artifact generation for leptos_ui_theme"

[lints]
workspace = true

[dependencies]
leptos_ui_theme_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
thiserror.workspace = true
