[package]
name = "leptos_ui_theme_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Deterministic artifact generation for leptos_ui_theme"

[lints]
workspace = true

[dependencies]
fs2.workspace = true
getrandom.workspace = true
html5ever.workspace = true
leptos_ui_theme_core.workspace = true
markup5ever_rcdom.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
thiserror.workspace = true
