[package]
name = "leptos_ui_theme_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core models and compiler logic for leptos_ui_theme"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
serde_json.workspace = true
